<resources>

    <string name="app_name">LPAPI Demo 2.1.20260108</string>

    <string name="str_ThanMore_Network_Technology">Shanghai ThanMore Network Technology Co., Ltd.</string>

    <string name="str_auto">Auto</string>
    <string name="str_normal">Normal</string>
    <string name="str_density_lightest">Lightest</string>
    <string name="str_density_lighter">Lighter</string>
    <string name="str_density_darker">Darker</string>
    <string name="str_density_darkest">Darkest</string>

    <string name="str_speed_slowest">Slowest</string>
    <string name="str_speed_slower">Slower</string>
    <string name="str_speed_faster">Faster</string>
    <string name="str_speed_fastest">Fastest</string>

    <string name="str_gap_type_receipt">Receipt</string>
    <string name="str_gap_type_positioning_hole">Positioning hole</string>
    <string name="str_gap_type_label">Label</string>
    <string name="str_gap_type_cardstock">Cardstock</string>

    <string name="str_label_print_successful">Label print successful!</string>
    <string name="str_current_printer_already_connected">Current printer is already connected</string>
    <string name="str_please_connect_printer_first">Printer is not connected. Please connect the printer first!</string>
    <string name="str_connecting_please_wait">Connecting printer, please wait!</string>

    <string name="str_not_support_bluetooth">Current device does not support Bluetooth!</string>
    <string name="str_bluetooth_adapter_not_turn_on">Bluetooth adapter is not turned on!</string>
    <string name="str_select_the_discovered_device">Select the discovered device</string>
    <string name="str_set_gap_type">Set gap type</string>
    <string name="str_please_connect_printer_first_2">Please connect the printer first</string>
    <string name="str_set_gap_length">Set gap length (skip distance)</string>
    <string name="str_gap_length">Gap length</string>
    <string name="str_ok">Ok</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_set_print_darkness">Set print darkness</string>
    <string name="str_set_print_speed">Set print speed</string>
    <string name="str_print_text">Print text</string>
    <string name="str_text_data">Text data</string>
    <string name="str_text_barcode">text barcode</string>
    <string name="str_barcode_data">Barcode data</string>
    <string name="str_print_qrcode">Print QR Code</string>
    <string name="str_qrcode_data">QR Code data</string>
    <string name="str_print_image">Print image</string>

    <string name="str_print_darkness">Print darkness</string>
    <string name="str_print_speed">Print speed</string>
    <string name="str_print_gap_type">Gap type</string>
    <string name="str_print_gap_length">Gap lengt</string>

    <string name="str_print_preview">Print preview</string>
    <string name="str_image_preview">Image Preview</string>
    <string name="str_connecting_printer">Connecting[%s]printer</string>
    <string name="str_printer_connected_successfully">Printer connected successfully!</string>
    <string name="str_printer">Printer</string>
    <string name="str_failed_connect_printer">Failed to connect to the printer!</string>
    <string name="str_printing_label">Printing label...</string>
    <string name="str_label_printed_successfully">Label printed successfully!</string>
    <string name="str_label_printed_failed">Label printing failed!</string>

    <string name="str_printer_unconnected">Printer: Unconnected</string>
    <string name="str_text_barcode_print_preview">Text Barcode (Print Preview)</string>
    <string name="str_print_qrcode_set_param">Print QR Code (Set print parameters when printing)</string>
    <string name="str_print_custom_template">Print Custom Template</string>
    <string name="str_multiple_templates">Print Multiple Templates Continuously</string>

</resources>